# TR-SINDY

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  DISCLAIMER.txt  LICENSE  Nuitka for windows  README.md  ROADMAP.md  TR-SINDY-Final.py  TurbulenceRealmSINDy.iss  TurbulenceRealmSINDy.spec  config.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-release.yml  ci.yml
linux/: install.sh
linux/deb/DEBIAN/: control
linux/deb/usr/share/applications/: turbulencerealm-sindy.desktop
mobile/: README.md  buildozer.spec  main.py
mobile/tr_sindy_mobile/: __init__.py  flow_lite.py  main.py  sindy_lite.py
scripts/: build.py  make_deb.sh  make_linux_installer.sh
src/: tr_sindy.py
src/tr_sindy_app/: __init__.py  _logging.py  _provenance.py  analysis.py  app.py  cli.py  export.py  glass_background.py  gui.py  ml_models.py  optical_flow.py  project.py  quality.py  roi_dialog.py  settings_dialog.py  sindy_core.py  theme.py
tests/: conftest.py  test_analysis.py  test_ml_models.py  test_package.py  test_project.py  test_provenance.py  test_quality.py  test_sindy_core.py
