[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tr-sindy"
version = "2.1.0"
description = "Video-based fluid-flow analysis with sparse identification of nonlinear dynamics"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Fayaz Rasheed", email = "fayaz@turbulencerealm.com"}
]
keywords = [
    "fluid-dynamics", "optical-flow", "sindy", "sparse-identification",
    "pinn", "turbulence", "scientific-computing", "navier-stokes"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PyQt6>=6.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "pysindy>=1.7.0",
]

[project.optional-dependencies]
# TV-L1 optical flow backend
tvl1 = ["opencv-contrib-python>=4.5.0"]
# Scientific export formats
export = ["h5py>=3.0.0", "pyarrow>=8.0.0"]
# Advanced interpolation
kriging = ["pykrige>=1.6.0"]
# Machine-learning models (PINN, FNO, DeepONet, ConvLSTM, VAE, GAN, RAFT)
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnx>=1.14.0",
]
# Development tooling
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://www.turbulencerealm.com"
Repository = "https://github.com/fayazr/TR-SINDY"
Issues = "https://github.com/fayazr/TR-SINDY/issues"
Changelog = "https://github.com/fayazr/TR-SINDY/blob/main/CHANGELOG.md"

[project.scripts]
tr-sindy = "tr_sindy_app.app:main"
tr-sindy-cli = "tr_sindy_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tr_sindy_app = ["*.json"]

# ---------------------------------------------------------------------
#  Ruff
# ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["archive", "dist", "build"]

[tool.ruff.lint]
# Enable a sensible default set: pyflakes, pycodestyle, import sorting,
# modern type hints, bugbear, comprehensions, naming.
select = ["E", "F", "I", "UP", "B", "C4", "N"]
ignore = [
    "E501",   # line length handled by formatter
    "E701",   # multiple statements on one line (colon) — existing code style
    "E702",   # multiple statements on one line (semicolon) — existing code style
    "E741",   # ambiguous variable names (l, I, O) — common in math code
    "B008",   # function call in default arg (used for dataclass defaults)
    "N802",   # function name should be lowercase — many physics funcs use CamelCase
    "N803",   # argument name should be lowercase — math uses capitals (X, U, V)
    "N806",   # variable in function should be lowercase — math uses capitals
    "UP045",  # Optional[X] -> X | None — existing code uses Optional throughout
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"src/tr_sindy_app/gui.py" = ["N802", "N803", "B904", "UP031"]  # legacy GUI conventions
"src/tr_sindy_app/app.py" = ["N814"]  # Theme as _T alias
"src/tr_sindy_app/optical_flow.py" = ["C408"]  # dict() call for params
"src/tr_sindy.py" = ["ALL"]  # archived v1.0 reference
"archive/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------
#  Pytest
# ---------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:pysindy.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]
